--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,33 +1,33 @@
 <div class="mat-elevation-z4">
-    <table mat-table class="full-width-table" [dataSource]="products">
+    <table mat-table class="full-width-table" [dataSource]="dataSource">
         <!-- Id Column -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>Id</th>
-            <td mat-cell *matCellDef="let produto">{{produto.id}}</td>
+            <td mat-cell *matCellDef="let product">{{product.id}}</td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let produto">{{produto.name}}</td>
+            <td mat-cell *matCellDef="let product">{{product.name}}</td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Price</th>
-            <td mat-cell *matCellDef="let produto">{{produto.price | currency:'EUR'}}</td>
+            <td mat-cell *matCellDef="let product">{{product.price | currency:'EUR'}}</td>
         </ng-container>
 
         <!-- Action Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
-            <td mat-cell *matCellDef="let produto">
-                <a routerLink = "/products/update/{{produto.id}}" class="edit">
+            <td mat-cell *matCellDef="let product">
+                <a routerLink = "/products/update/{{product.id}}" class="edit">
                     <i class="material-icons">
                       edit
                     </i>
                 </a>
-                <a routerLink = "/products/delete/{{produto.id}}" class="delete">
+                <a routerLink = "/products/delete/{{product.id}}" class="delete">
                     <i class="material-icons">
                       delete
                     </i>
@@ -36,9 +36,12 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let product; columns: displayedColumns;"></tr>
     </table>
-
-
-
+    <mat-paginator #paginator
+    [length]="dataSource?.data.length"
+    [pageIndex]="0"
+    [pageSize]="10"
+    [pageSizeOptions]="[0, 5, 10, 20]">
+</mat-paginator>
 </div>
